--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,37 +16,36 @@
                     <label for="film">Velg film</label>
                     <div id="film" class="dropdown">
                     </div>
-
-                    <div class="form-group">
-                        <label for="antall">Antall</label>
-                        <input type="text" class="form-control" id="antall" onchange="validerAntall(this.value)"/>
-                        <span id="feilAntall" style="color: red"></span>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="fornavn">Fornavn</label>
-                        <input type="text" class="form-control" id="fornavn" onchange="validerFornavn(this.value)"/>
-                        <span id="feilFornavn" style="color: red"></span>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="etternavn">Etternavn</label>
-                        <input type="text" class="form-control" id="etternavn" onchange="validerEtternavn(this.value)"/>
-                        <span id="feilEtternavn" style="color: red"></span>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="telefonnr">Telefonnr</label>
-                        <input type="text" class="form-control" id="telefonnr" onchange="validerTelefonnr(this.value)"/>
-                        <span id="feilTelefonnr" style="color: red"></span>
-                    </div>
-                    <div class="form-group">
-                        <label for="epost">Epost</label>
-                        <input type="text" class="form-control" id="epost" onchange="validerEpost(this.value)"/>
-                        <span id="feilEpost" style="color: red"></span>
-                    </div>
                 </div>
 
+                <div class="form-group">
+                    <label for="antall">Antall</label>
+                    <input type="number" class="form-control" id="antall" onchange="validerAntall(this.value)" />
+                    <span id="feilAntall" style="color: red"></span>
+                </div>
+
+                <div class="form-group">
+                    <label for="fornavn">Fornavn</label>
+                    <input type="text" class="form-control" id="fornavn" onchange="validerFornavn(this.value)" />
+                    <span id="feilFornavn" style="color: red"></span>
+                </div>
+
+                <div class="form-group">
+                    <label for="etternavn">Etternavn</label>
+                    <input type="text" class="form-control" id="etternavn" onchange="validerEtternavn(this.value)" />
+                    <span id="feilEtternavn" style="color: red"></span>
+                </div>
+
+                <div class="form-group">
+                    <label for="telefonnr">Telefonnr</label>
+                    <input type="text" class="form-control" id="telefonnr" onchange="validerTelefonnr(this.value)" />
+                    <span id="feilTelefonnr" style="color: red"></span>
+                </div>
+                <div class="form-group">
+                    <label for="epost">Epost</label>
+                    <input type="text" class="form-control" id="epost" onchange="validerEpost(this.value)" />
+                    <span id="feilEpost" style="color: red"></span>
+                </div>
             </form>
             <button class="btn btn-primary" onclick="regBillett()">Kjøp billett</button><br/>
         </div>
